--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,16 @@ body {
 .profile h1 {
     font-size: 26px;
     margin: 15px 0 5px 0;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+    -webkit-transition: .3s ease-in-out;
+    -moz-transition: .3s ease-in-out;
+    -ms-transition: .3s ease-in-out;
+    -o-transition: .3s ease-in-out;
+}
+
+.profile h1:hover {
+    color: #ff7f00;
 }
 
 .profile p {
